--- a/applications/testapp/CMakeLists.txt
+++ b/applications/testapp/CMakeLists.txt
@@ -16,4 +16,12 @@ set(DEPS_PUBLIC
 	cppql
 )
 
-make_target(TYPE ${TYPE} NAME ${NAME} STARTUP HEADERS "${HEADERS}" SOURCES "${SOURCES}" DEPS_PUBLIC "${DEPS_PUBLIC}")
+make_target(
+	TYPE ${TYPE}
+	NAME ${NAME}
+	WARNINGS WERROR
+	STARTUP
+	HEADERS "${HEADERS}"
+	SOURCES "${SOURCES}"
+	DEPS_PUBLIC "${DEPS_PUBLIC}"
+)
