Added first unit test

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "modules/common"]
 	path = modules/common
 	url = https://github.com/TimZoet/common-module.git
+[submodule "modules/bettertest"]
+	path = modules/bettertest
+	url = https://github.com/TimZoet/bettertest-module.git
