--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(alexandria)
+add_subdirectory(bettertest)
 add_subdirectory(common)
 add_subdirectory(cppql)
 add_subdirectory(dot)
