Started adding tests for types/properties

--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -5,11 +5,29 @@ set(SRC_DIR "src")
 
 set(HEADERS
     ${INCLUDE_DIR}/create_library.h
+    ${INCLUDE_DIR}/create_type_blob.h
+    ${INCLUDE_DIR}/create_type_blob_array.h
+    ${INCLUDE_DIR}/create_type_nested.h
+    ${INCLUDE_DIR}/create_type_nested_array.h
+    ${INCLUDE_DIR}/create_type_nested_reference.h
+    ${INCLUDE_DIR}/create_type_primitive.h
+    ${INCLUDE_DIR}/create_type_primitive_array.h
+    ${INCLUDE_DIR}/create_type_primitive_blob.h
+    ${INCLUDE_DIR}/utils.h
 )
 
 set(SOURCES
     ${SRC_DIR}/create_library.cpp
+    ${SRC_DIR}/create_type_blob.cpp
+    ${SRC_DIR}/create_type_blob_array.cpp
+    ${SRC_DIR}/create_type_nested.cpp
+    ${SRC_DIR}/create_type_nested_array.cpp
+    ${SRC_DIR}/create_type_nested_reference.cpp
+    ${SRC_DIR}/create_type_primitive.cpp
+    ${SRC_DIR}/create_type_primitive_array.cpp
+    ${SRC_DIR}/create_type_primitive_blob.cpp
     ${SRC_DIR}/main.cpp
+    ${SRC_DIR}/utils.cpp
 )
 
 set(DEPS_PRIVATE
@@ -21,7 +39,7 @@ make_target(
     TYPE ${TYPE}
     NAME ${NAME}
     OUTDIR "tests"
-    WARNINGS WERROR
+    # WARNINGS WERROR
     STARTUP
     HEADERS "${HEADERS}"
     SOURCES "${SOURCES}"
