Updated alexandria module, adapted and extended tests

--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -4,22 +4,14 @@ set(INCLUDE_DIR "include/alexandria_test")
 set(SRC_DIR "src")
 
 set(HEADERS
-    ${INCLUDE_DIR}/create_library.h
-    ${INCLUDE_DIR}/create_property.h
-    ${INCLUDE_DIR}/create_property_blob.h
-    ${INCLUDE_DIR}/create_property_nested.h
-    ${INCLUDE_DIR}/create_property_primitive.h
-    ${INCLUDE_DIR}/create_type.h
-    ${INCLUDE_DIR}/create_type_blob.h
-    ${INCLUDE_DIR}/create_type_blob_array.h
-    ${INCLUDE_DIR}/create_type_nested.h
-    ${INCLUDE_DIR}/create_type_nested_array.h
-    ${INCLUDE_DIR}/create_type_nested_reference.h
-    ${INCLUDE_DIR}/create_type_primitive.h
-    ${INCLUDE_DIR}/create_type_primitive_array.h
-    ${INCLUDE_DIR}/create_type_primitive_blob.h
-    ${INCLUDE_DIR}/type_add_property.h
     ${INCLUDE_DIR}/utils.h
+
+    # ${INCLUDE_DIR}/create_library.h
+    # ${INCLUDE_DIR}/create_property.h
+    # ${INCLUDE_DIR}/create_property_blob.h
+    # ${INCLUDE_DIR}/create_property_nested.h
+    # ${INCLUDE_DIR}/create_property_primitive.h
+    # ${INCLUDE_DIR}/type_add_property.h
 
     ${INCLUDE_DIR}/get/get_blob.h
 	${INCLUDE_DIR}/get/get_blob_array.h
@@ -28,6 +20,8 @@ set(HEADERS
 	${INCLUDE_DIR}/get/get_primitive_blob.h
 	${INCLUDE_DIR}/get/get_reference.h
 	${INCLUDE_DIR}/get/get_reference_array.h
+	${INCLUDE_DIR}/get/get_string.h
+	${INCLUDE_DIR}/get/get_string_array.h
 
     ${INCLUDE_DIR}/insert/insert_blob.h
 	${INCLUDE_DIR}/insert/insert_blob_array.h
@@ -36,26 +30,32 @@ set(HEADERS
 	${INCLUDE_DIR}/insert/insert_primitive_blob.h
 	${INCLUDE_DIR}/insert/insert_reference.h
 	${INCLUDE_DIR}/insert/insert_reference_array.h
+	${INCLUDE_DIR}/insert/insert_string.h
+	${INCLUDE_DIR}/insert/insert_string_array.h
+
+    ${INCLUDE_DIR}/types/create_type.h
+    ${INCLUDE_DIR}/types/create_type_blob.h
+    ${INCLUDE_DIR}/types/create_type_blob_array.h
+    ${INCLUDE_DIR}/types/create_type_primitive.h
+    ${INCLUDE_DIR}/types/create_type_primitive_array.h
+    ${INCLUDE_DIR}/types/create_type_primitive_blob.h
+    ${INCLUDE_DIR}/types/create_type_reference.h
+    ${INCLUDE_DIR}/types/create_type_reference_array.h
+    ${INCLUDE_DIR}/types/create_type_string.h
+    ${INCLUDE_DIR}/types/create_type_string_array.h
+    ${INCLUDE_DIR}/types/create_type_type.h
 )
 
 set(SOURCES
-    ${SRC_DIR}/create_library.cpp
-    ${SRC_DIR}/create_property.cpp
-    ${SRC_DIR}/create_property_blob.cpp
-    ${SRC_DIR}/create_property_nested.cpp
-    ${SRC_DIR}/create_property_primitive.cpp
-    ${SRC_DIR}/create_type.cpp
-    ${SRC_DIR}/create_type_blob.cpp
-    ${SRC_DIR}/create_type_blob_array.cpp
-    ${SRC_DIR}/create_type_nested.cpp
-    ${SRC_DIR}/create_type_nested_array.cpp
-    ${SRC_DIR}/create_type_nested_reference.cpp
-    ${SRC_DIR}/create_type_primitive.cpp
-    ${SRC_DIR}/create_type_primitive_array.cpp
-    ${SRC_DIR}/create_type_primitive_blob.cpp
     ${SRC_DIR}/main.cpp
-    ${SRC_DIR}/type_add_property.cpp
     ${SRC_DIR}/utils.cpp
+    # ${SRC_DIR}/create_library.cpp
+    # ${SRC_DIR}/create_property.cpp
+    # ${SRC_DIR}/create_property_blob.cpp
+    # ${SRC_DIR}/create_property_nested.cpp
+    # ${SRC_DIR}/create_property_primitive.cpp
+    
+    # ${SRC_DIR}/type_add_property.cpp
 
     ${SRC_DIR}/get/get_blob.cpp
 	${SRC_DIR}/get/get_blob_array.cpp
@@ -64,6 +64,8 @@ set(SOURCES
 	${SRC_DIR}/get/get_primitive_blob.cpp
 	${SRC_DIR}/get/get_reference.cpp
 	${SRC_DIR}/get/get_reference_array.cpp
+	${SRC_DIR}/get/get_string.cpp
+	${SRC_DIR}/get/get_string_array.cpp
 
     ${SRC_DIR}/insert/insert_blob.cpp
 	${SRC_DIR}/insert/insert_blob_array.cpp
@@ -72,6 +74,20 @@ set(SOURCES
 	${SRC_DIR}/insert/insert_primitive_blob.cpp
 	${SRC_DIR}/insert/insert_reference.cpp
 	${SRC_DIR}/insert/insert_reference_array.cpp
+	${SRC_DIR}/insert/insert_string.cpp
+	${SRC_DIR}/insert/insert_string_array.cpp
+
+    ${SRC_DIR}/types/create_type.cpp
+    ${SRC_DIR}/types/create_type_blob.cpp
+    ${SRC_DIR}/types/create_type_blob_array.cpp
+    ${SRC_DIR}/types/create_type_primitive.cpp
+    ${SRC_DIR}/types/create_type_primitive_array.cpp
+    ${SRC_DIR}/types/create_type_primitive_blob.cpp
+    ${SRC_DIR}/types/create_type_reference.cpp
+    ${SRC_DIR}/types/create_type_reference_array.cpp
+    ${SRC_DIR}/types/create_type_string.cpp
+    ${SRC_DIR}/types/create_type_string_array.cpp
+    ${SRC_DIR}/types/create_type_type.cpp
 )
 
 set(DEPS_PRIVATE
