Updated submodules, cleaned up tests

--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -6,13 +6,6 @@ set(SRC_DIR "src")
 set(HEADERS
     ${INCLUDE_DIR}/utils.h
 
-    # ${INCLUDE_DIR}/create_library.h
-    # ${INCLUDE_DIR}/create_property.h
-    # ${INCLUDE_DIR}/create_property_blob.h
-    # ${INCLUDE_DIR}/create_property_nested.h
-    # ${INCLUDE_DIR}/create_property_primitive.h
-    # ${INCLUDE_DIR}/type_add_property.h
-
     ${INCLUDE_DIR}/get/get_blob.h
 	${INCLUDE_DIR}/get/get_blob_array.h
 	${INCLUDE_DIR}/get/get_primitive.h
@@ -33,6 +26,8 @@ set(HEADERS
 	${INCLUDE_DIR}/insert/insert_string.h
 	${INCLUDE_DIR}/insert/insert_string_array.h
 
+    ${INCLUDE_DIR}/library/create_library.h
+
     ${INCLUDE_DIR}/types/create_type.h
     ${INCLUDE_DIR}/types/create_type_blob.h
     ${INCLUDE_DIR}/types/create_type_blob_array.h
@@ -49,13 +44,6 @@ set(HEADERS
 set(SOURCES
     ${SRC_DIR}/main.cpp
     ${SRC_DIR}/utils.cpp
-    # ${SRC_DIR}/create_library.cpp
-    # ${SRC_DIR}/create_property.cpp
-    # ${SRC_DIR}/create_property_blob.cpp
-    # ${SRC_DIR}/create_property_nested.cpp
-    # ${SRC_DIR}/create_property_primitive.cpp
-    
-    # ${SRC_DIR}/type_add_property.cpp
 
     ${SRC_DIR}/get/get_blob.cpp
 	${SRC_DIR}/get/get_blob_array.cpp
@@ -76,6 +64,8 @@ set(SOURCES
 	${SRC_DIR}/insert/insert_reference_array.cpp
 	${SRC_DIR}/insert/insert_string.cpp
 	${SRC_DIR}/insert/insert_string_array.cpp
+
+    ${SRC_DIR}/library/create_library.cpp
 
     ${SRC_DIR}/types/create_type.cpp
     ${SRC_DIR}/types/create_type_blob.cpp
