--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -9,6 +9,12 @@ set(HEADERS
     ${INCLUDE_DIR}/create/create_primitive.h
     ${INCLUDE_DIR}/create/create_string.h
 
+    ${INCLUDE_DIR}/delete/delete_blob_array.h
+    ${INCLUDE_DIR}/delete/delete_primitive.h
+    ${INCLUDE_DIR}/delete/delete_primitive_array.h
+    ${INCLUDE_DIR}/delete/delete_reference.h
+    ${INCLUDE_DIR}/delete/delete_reference_array.h
+
     ${INCLUDE_DIR}/get/get_blob.h
 	${INCLUDE_DIR}/get/get_blob_array.h
 	${INCLUDE_DIR}/get/get_primitive.h
@@ -50,6 +56,9 @@ set(SOURCES
 
     ${SRC_DIR}/create/create_primitive.cpp
     ${SRC_DIR}/create/create_string.cpp
+
+    ${SRC_DIR}/delete/delete_primitive.cpp
+    ${SRC_DIR}/delete/delete_reference.cpp
 
     ${SRC_DIR}/get/get_blob.cpp
 	${SRC_DIR}/get/get_blob_array.cpp
