--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -49,6 +49,15 @@ set(HEADERS
 
     ${INCLUDE_DIR}/library/create_library.h
 
+    ${INCLUDE_DIR}/member_types/member_type_blob.h
+	${INCLUDE_DIR}/member_types/member_type_blob_array.h
+	${INCLUDE_DIR}/member_types/member_type_instance_id.h
+	${INCLUDE_DIR}/member_types/member_type_primitive_array.h
+	${INCLUDE_DIR}/member_types/member_type_primitive_blob.h
+	${INCLUDE_DIR}/member_types/member_type_reference.h
+	${INCLUDE_DIR}/member_types/member_type_reference_array.h
+	${INCLUDE_DIR}/member_types/member_type_string_array.h
+
     ${INCLUDE_DIR}/types/create_type.h
     ${INCLUDE_DIR}/types/create_type_blob.h
     ${INCLUDE_DIR}/types/create_type_blob_array.h
@@ -111,6 +120,15 @@ set(SOURCES
 	${SRC_DIR}/insert/insert_string_array.cpp
 
     ${SRC_DIR}/library/create_library.cpp
+
+    ${SRC_DIR}/member_types/member_type_blob.cpp
+	${SRC_DIR}/member_types/member_type_blob_array.cpp
+	${SRC_DIR}/member_types/member_type_instance_id.cpp
+	${SRC_DIR}/member_types/member_type_primitive_array.cpp
+	${SRC_DIR}/member_types/member_type_primitive_blob.cpp
+	${SRC_DIR}/member_types/member_type_reference.cpp
+	${SRC_DIR}/member_types/member_type_reference_array.cpp
+	${SRC_DIR}/member_types/member_type_string_array.cpp
 
     ${SRC_DIR}/types/create_type.cpp
     ${SRC_DIR}/types/create_type_blob.cpp
