--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ endif()
 ################################################################################
 
 add_subdirectory(applications)
+add_subdirectory(examples)
 add_subdirectory(external)
 add_subdirectory(modules)
 add_subdirectory(tests)
