--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,3 @@
-# cmake-template
-# This file was last updated on 2020-08-23 (yyyy-mm-dd)
-
 cmake_minimum_required(VERSION 3.15)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_CMakePredefinedTargets")
@@ -9,7 +6,9 @@ set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_CMakePredefinedTargets"
 # Project.
 ################################################################################
 
-project(Alexandria VERSION 0.1.0 LANGUAGES CXX)
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/modules/alexandria")
+include(alexandriaVersionString)
+project(Alexandria VERSION ${ALEXANDRIA_VERSION} LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
@@ -17,29 +16,23 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # CMake modules.
 ################################################################################
 
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_BINARY_DIR};${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+include(InstallTarget)
 include(ISA)
 include(MakeTarget)
-
-################################################################################
-# Conan.
-################################################################################
-
-option(USE_CONAN "If you are using the Conan package manager, enable this option." OFF)
-if(USE_CONAN)
-    include(ConanPkgUtils)
-    conan_pkg_utils(PROFILE gcc10.1 PACKAGES fmt/7.0.3 nlohmann_json/3.9.1)
-endif()
 
 ################################################################################
 # Add subdirectories.
 ################################################################################
 
 add_subdirectory(applications)
-add_subdirectory(examples)
-add_subdirectory(external)
 add_subdirectory(modules)
-add_subdirectory(tests)
+if (BUILD_EXAMPLES)
+    add_subdirectory(examples)
+endif()
+if (BUILD_TESTS)
+    add_subdirectory(tests)
+endif()
 
 ################################################################################
 # Set startup project.
