--- a/applications/alexandria_cl/CMakeLists.txt
+++ b/applications/alexandria_cl/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(parsertongue REQUIRED)
+
 set(NAME alexandria_cl)
 set(TYPE application)
 set(INCLUDE_DIR "include/alexandria_cl")
@@ -14,7 +16,7 @@ set(SOURCES
 
 set(DEPS_PUBLIC
 	alexandria
-	parsertongue
+	parsertongue::parsertongue
 )
 
 make_target(TYPE ${TYPE} NAME ${NAME} HEADERS "${HEADERS}" SOURCES "${SOURCES}" DEPS_PUBLIC "${DEPS_PUBLIC}")
