--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -37,17 +37,15 @@ set(HEADERS
 	#${INCLUDE_DIR}/get/get_string.h
 	#${INCLUDE_DIR}/get/get_string_array.h
 
-    #${INCLUDE_DIR}/insert/insert_blob.h
-	#${INCLUDE_DIR}/insert/insert_blob_array.h
-	#${INCLUDE_DIR}/insert/insert_direct.h
-	#${INCLUDE_DIR}/insert/insert_managed.h
+    ${INCLUDE_DIR}/insert/insert_blob.h
+	${INCLUDE_DIR}/insert/insert_blob_array.h
 	${INCLUDE_DIR}/insert/insert_primitive.h
-	#${INCLUDE_DIR}/insert/insert_primitive_array.h
-	#${INCLUDE_DIR}/insert/insert_primitive_blob.h
-	#${INCLUDE_DIR}/insert/insert_reference.h
-	#${INCLUDE_DIR}/insert/insert_reference_array.h
-	#${INCLUDE_DIR}/insert/insert_string.h
-	#${INCLUDE_DIR}/insert/insert_string_array.h
+	${INCLUDE_DIR}/insert/insert_primitive_array.h
+	${INCLUDE_DIR}/insert/insert_primitive_blob.h
+	${INCLUDE_DIR}/insert/insert_reference.h
+	${INCLUDE_DIR}/insert/insert_reference_array.h
+	${INCLUDE_DIR}/insert/insert_string.h
+	${INCLUDE_DIR}/insert/insert_string_array.h
 
     ${INCLUDE_DIR}/library/create_library.h
 
@@ -109,17 +107,15 @@ set(SOURCES
 	#${SRC_DIR}/get/get_string.cpp
 	#${SRC_DIR}/get/get_string_array.cpp
 
-    #${SRC_DIR}/insert/insert_blob.cpp
-	#${SRC_DIR}/insert/insert_blob_array.cpp
-	#${SRC_DIR}/insert/insert_direct.cpp
-	#${SRC_DIR}/insert/insert_managed.cpp
+    ${SRC_DIR}/insert/insert_blob.cpp
+	${SRC_DIR}/insert/insert_blob_array.cpp
 	${SRC_DIR}/insert/insert_primitive.cpp
-	#${SRC_DIR}/insert/insert_primitive_array.cpp
-	#${SRC_DIR}/insert/insert_primitive_blob.cpp
-	#${SRC_DIR}/insert/insert_reference.cpp
-	#${SRC_DIR}/insert/insert_reference_array.cpp
-	#${SRC_DIR}/insert/insert_string.cpp
-	#${SRC_DIR}/insert/insert_string_array.cpp
+	${SRC_DIR}/insert/insert_primitive_array.cpp
+	${SRC_DIR}/insert/insert_primitive_blob.cpp
+	${SRC_DIR}/insert/insert_reference.cpp
+	${SRC_DIR}/insert/insert_reference_array.cpp
+	${SRC_DIR}/insert/insert_string.cpp
+	${SRC_DIR}/insert/insert_string_array.cpp
 
     ${SRC_DIR}/library/create_library.cpp
 
