Restored retrieval functionality

--- a/modules/alexandria/CMakeLists.txt
+++ b/modules/alexandria/CMakeLists.txt
@@ -39,12 +39,17 @@ set(HEADERS
     #${INCLUDE_DIR}/object_handler/reference_array_handler.h
     #${INCLUDE_DIR}/object_handler/type_traits.h
     ${INCLUDE_DIR}/queries/delete_query.h
+    ${INCLUDE_DIR}/queries/get_query.h
     ${INCLUDE_DIR}/queries/insert_query.h
     ${INCLUDE_DIR}/queries/utils.h
     ${INCLUDE_DIR}/queries/deleters/blob_array_deleter.h
     ${INCLUDE_DIR}/queries/deleters/primitive_array_deleter.h
     ${INCLUDE_DIR}/queries/deleters/primitive_deleter.h
     ${INCLUDE_DIR}/queries/deleters/reference_array_deleter.h
+    ${INCLUDE_DIR}/queries/getters/blob_array_getter.h
+    ${INCLUDE_DIR}/queries/getters/primitive_array_getter.h
+    ${INCLUDE_DIR}/queries/getters/primitive_getter.h
+    ${INCLUDE_DIR}/queries/getters/reference_array_getter.h
     ${INCLUDE_DIR}/queries/inserters/blob_array_inserter.h
     ${INCLUDE_DIR}/queries/inserters/primitive_array_inserter.h
     ${INCLUDE_DIR}/queries/inserters/primitive_inserter.h
