--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -18,17 +18,15 @@ set(HEADERS
     ${INCLUDE_DIR}/delete/delete_string.h
     ${INCLUDE_DIR}/delete/delete_string_array.h
 
-    #${INCLUDE_DIR}/get/get_blob.h
-	#${INCLUDE_DIR}/get/get_blob_array.h
-	#${INCLUDE_DIR}/get/get_direct.h
-	#${INCLUDE_DIR}/get/get_managed.h
-	#${INCLUDE_DIR}/get/get_primitive.h
-	#${INCLUDE_DIR}/get/get_primitive_array.h
-	#${INCLUDE_DIR}/get/get_primitive_blob.h
-	#${INCLUDE_DIR}/get/get_reference.h
-	#${INCLUDE_DIR}/get/get_reference_array.h
-	#${INCLUDE_DIR}/get/get_string.h
-	#${INCLUDE_DIR}/get/get_string_array.h
+    ${INCLUDE_DIR}/get/get_blob.h
+	${INCLUDE_DIR}/get/get_blob_array.h
+	${INCLUDE_DIR}/get/get_primitive.h
+	${INCLUDE_DIR}/get/get_primitive_array.h
+	${INCLUDE_DIR}/get/get_primitive_blob.h
+	${INCLUDE_DIR}/get/get_reference.h
+	${INCLUDE_DIR}/get/get_reference_array.h
+	${INCLUDE_DIR}/get/get_string.h
+	${INCLUDE_DIR}/get/get_string_array.h
 
     ${INCLUDE_DIR}/insert/insert_blob.h
 	${INCLUDE_DIR}/insert/insert_blob_array.h
@@ -81,17 +79,15 @@ set(SOURCES
     ${SRC_DIR}/delete/delete_string.cpp
     ${SRC_DIR}/delete/delete_string_array.cpp
 
-    #${SRC_DIR}/get/get_blob.cpp
-	#${SRC_DIR}/get/get_blob_array.cpp
-	#${SRC_DIR}/get/get_direct.cpp
-	#${SRC_DIR}/get/get_managed.cpp
-	#${SRC_DIR}/get/get_primitive.cpp
-	#${SRC_DIR}/get/get_primitive_array.cpp
-	#${SRC_DIR}/get/get_primitive_blob.cpp
-	#${SRC_DIR}/get/get_reference.cpp
-	#${SRC_DIR}/get/get_reference_array.cpp
-	#${SRC_DIR}/get/get_string.cpp
-	#${SRC_DIR}/get/get_string_array.cpp
+    ${SRC_DIR}/get/get_blob.cpp
+	${SRC_DIR}/get/get_blob_array.cpp
+	${SRC_DIR}/get/get_primitive.cpp
+    ${SRC_DIR}/get/get_primitive_array.cpp
+	${SRC_DIR}/get/get_primitive_blob.cpp
+	${SRC_DIR}/get/get_reference.cpp
+	${SRC_DIR}/get/get_reference_array.cpp
+	${SRC_DIR}/get/get_string.cpp
+	${SRC_DIR}/get/get_string_array.cpp
 
     ${SRC_DIR}/insert/insert_blob.cpp
 	${SRC_DIR}/insert/insert_blob_array.cpp
