--- a/modules/alexandria/CMakeLists.txt
+++ b/modules/alexandria/CMakeLists.txt
@@ -41,6 +41,7 @@ set(HEADERS
     ${INCLUDE_DIR}/queries/delete_query.h
     ${INCLUDE_DIR}/queries/get_query.h
     ${INCLUDE_DIR}/queries/insert_query.h
+    ${INCLUDE_DIR}/queries/update_query.h
     ${INCLUDE_DIR}/queries/utils.h
     ${INCLUDE_DIR}/queries/deleters/blob_array_deleter.h
     ${INCLUDE_DIR}/queries/deleters/primitive_array_deleter.h
@@ -54,6 +55,7 @@ set(HEADERS
     ${INCLUDE_DIR}/queries/inserters/primitive_array_inserter.h
     ${INCLUDE_DIR}/queries/inserters/primitive_inserter.h
     ${INCLUDE_DIR}/queries/inserters/reference_array_inserter.h
+    ${INCLUDE_DIR}/queries/updaters/primitive_updater.h
     ${INCLUDE_DIR}/queries/types/member_extractor.h
 )
 
