--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -10,6 +10,7 @@ set(HEADERS
 
     ${INCLUDE_DIR}/delete/delete_blob.h
     ${INCLUDE_DIR}/delete/delete_blob_array.h
+    ${INCLUDE_DIR}/delete/delete_invalid.h
     ${INCLUDE_DIR}/delete/delete_primitive.h
     ${INCLUDE_DIR}/delete/delete_primitive_array.h
     ${INCLUDE_DIR}/delete/delete_primitive_blob.h
@@ -20,6 +21,7 @@ set(HEADERS
 
     ${INCLUDE_DIR}/get/get_blob.h
 	${INCLUDE_DIR}/get/get_blob_array.h
+	${INCLUDE_DIR}/get/get_invalid.h
 	${INCLUDE_DIR}/get/get_primitive.h
 	${INCLUDE_DIR}/get/get_primitive_array.h
 	${INCLUDE_DIR}/get/get_primitive_blob.h
@@ -30,6 +32,7 @@ set(HEADERS
 
     ${INCLUDE_DIR}/insert/insert_blob.h
 	${INCLUDE_DIR}/insert/insert_blob_array.h
+	${INCLUDE_DIR}/insert/insert_invalid.h
 	${INCLUDE_DIR}/insert/insert_primitive.h
 	${INCLUDE_DIR}/insert/insert_primitive_array.h
 	${INCLUDE_DIR}/insert/insert_primitive_blob.h
@@ -63,6 +66,7 @@ set(HEADERS
 
     ${INCLUDE_DIR}/update/update_blob.h
 	${INCLUDE_DIR}/update/update_blob_array.h
+	${INCLUDE_DIR}/update/update_invalid.h
 	${INCLUDE_DIR}/update/update_primitive.h
 	${INCLUDE_DIR}/update/update_primitive_array.h
 	${INCLUDE_DIR}/update/update_primitive_blob.h
@@ -78,6 +82,7 @@ set(SOURCES
 
     ${SRC_DIR}/delete/delete_blob.cpp
     ${SRC_DIR}/delete/delete_blob_array.cpp
+    ${SRC_DIR}/delete/delete_invalid.cpp
     ${SRC_DIR}/delete/delete_primitive.cpp
     ${SRC_DIR}/delete/delete_primitive_array.cpp
     ${SRC_DIR}/delete/delete_primitive_blob.cpp
@@ -88,6 +93,7 @@ set(SOURCES
 
     ${SRC_DIR}/get/get_blob.cpp
 	${SRC_DIR}/get/get_blob_array.cpp
+	${SRC_DIR}/get/get_invalid.cpp
 	${SRC_DIR}/get/get_primitive.cpp
     ${SRC_DIR}/get/get_primitive_array.cpp
 	${SRC_DIR}/get/get_primitive_blob.cpp
@@ -98,6 +104,7 @@ set(SOURCES
 
     ${SRC_DIR}/insert/insert_blob.cpp
 	${SRC_DIR}/insert/insert_blob_array.cpp
+	${SRC_DIR}/insert/insert_invalid.cpp
 	${SRC_DIR}/insert/insert_primitive.cpp
 	${SRC_DIR}/insert/insert_primitive_array.cpp
 	${SRC_DIR}/insert/insert_primitive_blob.cpp
@@ -131,6 +138,7 @@ set(SOURCES
 
     ${SRC_DIR}/update/update_blob.cpp
 	${SRC_DIR}/update/update_blob_array.cpp
+	${SRC_DIR}/update/update_invalid.cpp
 	${SRC_DIR}/update/update_primitive.cpp
 	${SRC_DIR}/update/update_primitive_array.cpp
 	${SRC_DIR}/update/update_primitive_blob.cpp
