Introduced TableSets class that exposes all underlying tables.

--- a/modules/alexandria/CMakeLists.txt
+++ b/modules/alexandria/CMakeLists.txt
@@ -32,6 +32,7 @@ set(HEADERS
     ${INCLUDE_DIR}/queries/delete_query.h
     ${INCLUDE_DIR}/queries/get_query.h
     ${INCLUDE_DIR}/queries/insert_query.h
+    ${INCLUDE_DIR}/queries/table_sets.h
     ${INCLUDE_DIR}/queries/update_query.h
     ${INCLUDE_DIR}/queries/utils.h
     ${INCLUDE_DIR}/queries/deleters/blob_array_deleter.h
@@ -47,6 +48,10 @@ set(HEADERS
     ${INCLUDE_DIR}/queries/inserters/primitive_inserter.h
     ${INCLUDE_DIR}/queries/inserters/reference_array_inserter.h
     ${INCLUDE_DIR}/queries/updaters/primitive_updater.h
+    ${INCLUDE_DIR}/queries/table_sets/blob_array_table_set.h
+    ${INCLUDE_DIR}/queries/table_sets/primitive_array_table_set.h
+    ${INCLUDE_DIR}/queries/table_sets/primitive_table_set.h
+    ${INCLUDE_DIR}/queries/table_sets/reference_array_table_set.h
     ${INCLUDE_DIR}/queries/types/member_extractor.h
 )
 
