--- a/tests/alexandria_test/CMakeLists.txt
+++ b/tests/alexandria_test/CMakeLists.txt
@@ -57,6 +57,16 @@ set(HEADERS
 	${INCLUDE_DIR}/member_types/member_type_string_array.h
 	${INCLUDE_DIR}/member_types/member_type_string_array_custom.h
 
+    ${INCLUDE_DIR}/table_sets/table_sets_blob.h
+	${INCLUDE_DIR}/table_sets/table_sets_blob_array.h
+	${INCLUDE_DIR}/table_sets/table_sets_primitive.h
+	${INCLUDE_DIR}/table_sets/table_sets_primitive_array.h
+	${INCLUDE_DIR}/table_sets/table_sets_primitive_blob.h
+	${INCLUDE_DIR}/table_sets/table_sets_reference.h
+	${INCLUDE_DIR}/table_sets/table_sets_reference_array.h
+	${INCLUDE_DIR}/table_sets/table_sets_string.h
+	${INCLUDE_DIR}/table_sets/table_sets_string_array.h
+
     ${INCLUDE_DIR}/types/create_type.h
     ${INCLUDE_DIR}/types/create_type_blob.h
     ${INCLUDE_DIR}/types/create_type_blob_array.h
@@ -133,6 +143,16 @@ set(SOURCES
 	#${SRC_DIR}/member_types/member_type_reference_array.cpp
 	${SRC_DIR}/member_types/member_type_string_array.cpp
 	${SRC_DIR}/member_types/member_type_string_array_custom.cpp
+
+    ${SRC_DIR}/table_sets/table_sets_blob.cpp
+	${SRC_DIR}/table_sets/table_sets_blob_array.cpp
+	${SRC_DIR}/table_sets/table_sets_primitive.cpp
+	${SRC_DIR}/table_sets/table_sets_primitive_array.cpp
+	${SRC_DIR}/table_sets/table_sets_primitive_blob.cpp
+	${SRC_DIR}/table_sets/table_sets_reference.cpp
+	${SRC_DIR}/table_sets/table_sets_reference_array.cpp
+	${SRC_DIR}/table_sets/table_sets_string.cpp
+	${SRC_DIR}/table_sets/table_sets_string_array.cpp
 
     ${SRC_DIR}/types/create_type.cpp
     ${SRC_DIR}/types/create_type_blob.cpp
