--- a/tests/alexandria-extended-query_test/CMakeLists.txt
+++ b/tests/alexandria-extended-query_test/CMakeLists.txt
@@ -6,6 +6,8 @@ set(INCLUDE_DIR "include/alexandria-extended-query_test")
 set(SRC_DIR "src")
 
 set(HEADERS
+    ${INCLUDE_DIR}/search_queries/primitive_search.h
+
     ${INCLUDE_DIR}/table_sets/table_sets_blob.h
 	${INCLUDE_DIR}/table_sets/table_sets_blob_array.h
 	${INCLUDE_DIR}/table_sets/table_sets_nested.h
@@ -21,6 +23,8 @@ set(HEADERS
 
 set(SOURCES
     ${SRC_DIR}/main.cpp
+
+    ${SRC_DIR}/search_queries/primitive_search.cpp
 
     ${SRC_DIR}/table_sets/table_sets_blob.cpp
 	${SRC_DIR}/table_sets/table_sets_blob_array.cpp
