Implemented reference array search queries and improved primitive search queries. Bumped cppql to v0.2.1.

--- a/modules/alexandria-extended-query/CMakeLists.txt
+++ b/modules/alexandria-extended-query/CMakeLists.txt
@@ -10,6 +10,7 @@ set(HEADERS
     ${INCLUDE_DIR}/table_sets.h
 
     ${INCLUDE_DIR}/search_queries/primitive_search.h
+    ${INCLUDE_DIR}/search_queries/reference_search.h
 
     ${INCLUDE_DIR}/table_sets/blob_array_table_set.h
     ${INCLUDE_DIR}/table_sets/primitive_array_table_set.h
